--- a/Assets/Css/Style.css
+++ b/Assets/Css/Style.css
@@ -2,6 +2,8 @@
 
 *{
     box-sizing: border-box;
+    font-family: Assistant;
+    line-height: 150%;
 }
 
 body{
@@ -58,6 +60,10 @@ header {
     height: 640px;
 }
 
+main {
+    margin-inline: 20px;
+}
+
 .navBar {
     display: flex;
     justify-content: space-between;
@@ -66,10 +72,13 @@ header {
     padding: 16px;
 }
 
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
 nav a {
     color: white;
-    text-decoration: none;
-    font-family: Assistant;
     font-size: 20px;
     margin-left: 50px;
     text-shadow: var(--standard-shadow);
@@ -94,4 +103,102 @@ nav a:hover {
     background: var(--buttonDarkRed);
     box-shadow: var(--hover-shadow);
     text-decoration: none;
+}
+
+h1 {
+    font-family: Quicksand;
+    font-size: 40px;
+    margin: 0;
+}
+
+h2 {
+    font-family: Quicksand;
+    font-size: 32px;
+    margin: 0;
+}
+
+h3 {
+    font-family: Quicksand;
+    font-size: 24px;
+    margin: 0;
+}
+
+h4 {
+    font-family: Quicksand;
+    font-size: 20px;
+    margin: 0;
+}
+
+p {
+    font-size: 20px;
+    margin: 0;
+}  
+
+.introduction {
+    max-width: 75ch;
+    justify-self: center;
+}
+
+.recipe {
+    box-shadow: var(--standard-shadow);
+     max-width: 446px;
+     height: 576px;
+     border-radius: 4px;
+     padding-bottom: 11px;
+}
+
+.recipe h3 {
+    width: 287px;
+}
+
+.recipeMainPic {
+    width: 446px;
+    height: 448px;
+    object-fit: cover;   
+    border-radius: 4px;
+}
+
+.cardInfo {
+    display: flex;
+    justify-content: space-between;
+    margin-right: 15px;
+    
+}
+
+.cardInfoImg {
+    max-width: 24px;
+    max-height: 24px;
+    border-radius: 50%;          
+    overflow: hidden;
+    display: inline-block;
+}
+
+.cardInfoImg img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;   
+}
+
+.recipeAuthor {
+    display: flex;
+    gap: 5px;
+}
+
+.cardInfo div {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+.cardInfoTop div {
+    align-items: flex-start;
+}
+
+.cardInfoBot {
+    margin-top: 11px;
+}
+
+.recipes {
+    display: flex;
+    gap: 32px;
 }
