--- a/Assets/Css/Style.css
+++ b/Assets/Css/Style.css
@@ -10,30 +10,6 @@ body{
     margin: 0;
 }
 
-/* 
-// <weight>: Use a value from 200 to 800
-// <uniquifier>: Use a unique and descriptive class name
-
-.assistant-<uniquifier> {
-    font-family: "Assistant", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: <weight>;
-    font-style: normal;
-}
-*/
-
-/* 
-// <weight>: Use a value from 300 to 700
-// <uniquifier>: Use a unique and descriptive class name
-
-.quicksand-<uniquifier> {
-    font-family: "Quicksand", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: <weight>;
-    font-style: normal;
-}
-*/
-
 :root {
 /* Farver */
     --darkGray: hsl(0, 0%, 13%);
@@ -61,6 +37,7 @@ body{
     background-size: cover;
     background-repeat: no-repeat;
     background-position: x y;
+    position: relative;
 }
 
 header {
@@ -98,6 +75,10 @@ nav a:hover {
     text-shadow: var(--hover-shadow);
 }
 
+.buttonWrapper {
+    display: grid;
+}
+
 .button {
     background: var(--buttonLightRed);
     padding: 12px 24px;
@@ -105,6 +86,8 @@ nav a:hover {
     cursor: pointer;
     box-shadow: var(--standard-shadow);
     color: white;
+    font-size: 20px;
+    justify-self: center;
 }
 
 .button:hover {
@@ -141,6 +124,10 @@ p {
     font-size: 20px;
     margin: 0;
 }  
+
+section {
+    margin-block: 96px;
+}
 
 .introduction {
     display: grid;
@@ -221,67 +208,61 @@ p {
 
 
 
+/* Rick Stein page */
+.rickSteinProfilePic  {
+    width: 285px;
+    height: 285px;
+    border-radius: 50%;
+    position: absolute;
+    bottom: 16px;
+    left: 180px;
+}
 
+.rickSteinProfilePic img {
+width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+  border-radius: 50%;
+  object-position: 20% 40%;
+}
 
+.rickSteinInfo {
+    margin-inline: 180px;
+    display: flex;
+    justify-content: space-between;
+}
 
+.rickSteinIntro {
+    max-width: 924px;
+}
 
+.rickSteinExtraStats{
+    margin-top: 48px;
+    width: 446px;
+}
 
+.rickSteinStats {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    margin-top: 8px;
+}
 
+.kitchenware {
+    display: flex;
+    gap: 32px;
+}
 
+.kitchenwareItem {
+    border-radius: 4px;
+    box-shadow: var(--standard-shadow);
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.kitchenwareItem img {
+    width: 446px;
+    height: 448px;
+    border-radius: 4px;
+}
 /* Recipe page */
 #recipeHeader  {
     background-image: url(../Img/curriedCarrotSoup/curriedCarrotSoup.jpg);
@@ -292,7 +273,8 @@ p {
 #recipeTop{
     display: flex;
     justify-content: space-between;
-    margin-bottom:13rem;
+    margin-top: 0;
+    
 }
 
 #recipeNameAndIcon {
@@ -346,38 +328,26 @@ p {
     border-radius: 50%;
 }
 
-/* #metaData {
-    display: flex;
-    justify-content: space-around;
-
-    
+.procedureSection {
+    background: var(--cream);
+    margin-inline: 340px;
+    padding-block: 56px;
+    padding-inline: 100px;
+    border-radius: 4px;
+    display: grid;
 }
 
-#metaData div{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 1rem;
-    margin-bottom: 96px;
+.procedure {
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    justify-items: center;
 }
 
-#recipeClock{
-    height: 96px;
-    width: 96px;
+.vertical-hr {
+  width: 1px;          
+  height: 524px;               
+  margin: 0;
 }
-
-#recipeUtensils{
-    width: 39px;
-    height: 96px;
-}
-
-
-
-#recipeBox{
-    background-color: var(--cream);
-    width: 1242px;
-} */
-
 
 
 
@@ -420,7 +390,7 @@ hr{
 .recipeCardSection {
     display: flex;
     gap: 2rem;
-    margin-bottom: 3rem;
+    margin-top: 0;
 }
 .recipeCard{
     box-shadow: var(--standard-shadow);
@@ -473,12 +443,6 @@ hr{
     margin-bottom: 1rem;
 }
 
-
-
-
-
-
-
 /* Footer */
 footer {
     color: white;
@@ -492,12 +456,14 @@ footer {
 footer a {
     text-decoration: underline;
     padding-inline: 48px;
+    font-size: 20px;
 }
 
 /* Accordion */
 .accordionSection {
     display: flex;
     gap: 32px;
+    margin-top: 32px;
 }
 
 .accordionButton {
@@ -517,7 +483,10 @@ footer a {
   max-width: 100%;
   background: var(--likeLightBlue);
   position: absolute;
+  left: 12%;
   display: flex;
+  border-radius: 4px;
+  margin-top: 8px;
 }
 
 .accordion.accordionOpen .accordionIndhold  {
